   Creative Commons, 559 Nathan Abbott Way, Stanford, California 94305,
   USA.  A summary of the license and the full legal text is included
   in file: COPYING.  If you wish to distribute some or all of this work
   under different terms, please contact respective author(s).
   The license applies to all entries newer than 2009-04-28.
*/

2017-02-14 12:43 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r446)
  * hbdbu/dbu.prg
    ! Fixed: an assertion check.
  * hbdbu/hbdbu.hbp
    + hbqtcharts.hbc
  
  * hbide/debugger.prg
    ! Fixed: another non-sense bug bypassing another assertion check.
  * hbide/projmanager.prg
    ! Fixed: if another project is initiated while one is in build state,
	   fake method call was being reported.
    
  * hbqt/hbmk2_qt.hb
    - Removed: #define Q_NULLPTR.
	! Fixed: parsing of QApplication::translate(*.*). Now HbQt compiles 
	   good with any version of Qt.
  * hbqt/hbqt_common.hbc
    % Formatting.
	
  * hbqt/qtcharts/qth/QAbstractBarSeries.qth
  * hbqt/qtcharts/qth/QChartView.qth
    ! Preliminary effort to stramline child ownership. Still generates 
	   GPF on exit in some circumstances.
  * hbqt/qtcore/hbqt_misc.prg
    - Guarded again - QApplication_translate() - for Qt v4.x only.
  * hbqt/qtcore/hbqt_pointer.cpp
    + Introduced : define HBQT_WITH_QML_SUPPORT needed to link 
	   QtQuick and QtQml plugins in static builds.
	   So, if you are building QML based applications then 
	   compile hbqtcore with -DHBQT_WITH_QML_SUPPORT compiler flag.
	   
      #ifdef HBQT_WITH_QML_SUPPORT
         Q_IMPORT_PLUGIN(QtQuickLayoutsPlugin)
         Q_IMPORT_PLUGIN(QtQuickControls1Plugin)
         Q_IMPORT_PLUGIN(QtQuickControls2Plugin)
         Q_IMPORT_PLUGIN(QtQuick2Plugin)
         Q_IMPORT_PLUGIN(QtQuick2DialogsPrivatePlugin)
         Q_IMPORT_PLUGIN(QtQuick2DialogsPlugin)
         Q_IMPORT_PLUGIN(QtQuick2WindowPlugin)
         Q_IMPORT_PLUGIN(QtQuick2PrivateWidgetsPlugin)
         Q_IMPORT_PLUGIN(QtQuick2ParticlesPlugin)