@@ -4,6 +4,6 @@
    #define __HBQT_VERSION_CH
 
 #define __HB_QT_MAJOR_VERSION_5__        "Qt User Interface Compiler version 5.7.0"
-#define __HBQT_REVISION__                "446"
+#define __HBQT_REVISION__                "447"
 
 #endif
